# szurubooru-scripts

./: README.md  config.ini  setup.cfg
classes/: user_input.py
tools/: image_uploader.py
