[metadata]
name = szuru-toolkit
version = 0.0.1

[options]
install_requires =
    requests==2.25.1
    tqdm==4.59.0
    beautifulsoup4==4.9.3
    Pillow==8.2.0
    appdirs==1.4.4
    dryable==1.1.0
packages = find:
include_package_data = True
python_requires = >= 3.6

[options.entry_points]
console_scripts =
    szuru-upload = tools.image_uploader:main
#    szuru-autotag = tools.auto_tagger:main
